# traq-server

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  GCP_SETUP_NOTES.md  LICENSE  MAIN_DECOMPOSITION_PLAN.md  README.md  REMOTE_CLI_PLAN.md  TREE_IDENTIFICATION_FRONTEND_NOTE.md  admin_cli.py  manifest_smoke.json  pyproject.toml  requirements.txt
alembic/: env.py
app/: README.md  artifact_storage.py  config.py  db.py  db_models.py  db_store.py  fs_utils.py  geojson_export.py  main.py  pdf_fill.py  release_verification.py  report_letter.py  runtime_context.py  security_store.py  server_cli.py  service_discovery.py
app/api/: __init__.py  (+15 more)
docs/: TODO.md  architecture.rst  archive_retention.rst  cli_operations_model.rst  conf.py  database_schema.rst  database_workflow.rst  db_store_plan.rst  deployment_operations.rst  gcp_deployment_runbook.rst  geojson_storage.rst  import_validation_2026-03-14.rst  index.rst  legacy_import.rst  local_development.rst  postgresql_bootstrap.md  postgresql_bootstrap.rst  runtime_export_boundary.rst  testing_and_validation.rst  tree_identity_contract.rst
issues/: admin_auth_model_too_weak_for_remote_beta.md  archived_job_auto_claim_too_permissive.md  archived_job_restore_behavior.md  deployment_status_2026-03-17.md  gcp_deployment_audit.md  gcp_deployment_readiness_spec.md  gcp_service_cost_estimate.csv  gcp_services_pricing_list.md  issue_tracking_workflow.md  runtime_storage_db_migration_spec.md  server_repo_hardening_checklist.md
scripts/: release_verify.py  run_local_container.sh
templates/: round_submit.template.json
(+268 files in other folders)
